RESOLVED FIXED167757
LayoutTest workers/bomb.html is a Crash
https://bugs.webkit.org/show_bug.cgi?id=167757
Summary LayoutTest workers/bomb.html is a Crash
Ryan Haddad
Reported 2017-02-02 14:33:40 PST
Attachments
Diff (111.09 KB, text/plain)
2017-05-15 17:37 PDT, Matt Lewis
no flags
patch (5.37 KB, patch)
2017-07-03 19:57 PDT, Saam Barati
no flags
Ryan Haddad
Comment 1 2017-02-02 14:34:38 PST
This appears to be limited to Sierra Release.
Ryan Haddad
Comment 2 2017-02-02 14:48:11 PST
This is not a recent regression. I went ahead and marked the test as flaky in http://trac.webkit.org/projects/webkit/changeset/211595
Matt Lewis
Comment 4 2017-06-06 16:46:44 PDT
Marked as flaky on iOS WK2 Release: https://trac.webkit.org/changeset/217868/webkit/
Yusuke Suzuki
Comment 5 2017-06-27 18:06:48 PDT
i've just speculatively unmarked it due to the fix in https://bugs.webkit.org/show_bug.cgi?id=173888
David Kilzer (:ddkilzer)
Comment 6 2017-06-28 04:42:35 PDT
(In reply to Yusuke Suzuki from comment #5) > i've just speculatively unmarked it due to the fix in > https://bugs.webkit.org/show_bug.cgi?id=173888 Resolving this based on the comment above (since no TestExpectations file is referencing this bug anymore).
Saam Barati
Comment 7 2017-07-03 11:31:13 PDT
Marking as flaky again on iOS/mac. Tracking it here: https://bugs.webkit.org/show_bug.cgi?id=171985
Matt Lewis
Comment 8 2017-07-03 13:32:43 PDT
Matt Lewis
Comment 9 2017-07-03 13:34:56 PDT
(In reply to Matt Lewis from comment #8) > <rdar://problem/33086462> The test has turned into a fairly consistent crash. Associating this bug with the radar and reopening bug as the proposed fix does not appear to have fixed the issues with this test.
Matt Lewis
Comment 10 2017-07-03 16:35:40 PDT
Skipped test on macOS WK2 as it is a consistent crash: https://trac.webkit.org/changeset/219107/webkit/
Saam Barati
Comment 11 2017-07-03 18:28:02 PDT
I'm working on this now
Saam Barati
Comment 12 2017-07-03 19:57:49 PDT
Keith Miller
Comment 13 2017-07-03 20:06:24 PDT
Comment on attachment 314548 [details] patch r=me.
WebKit Commit Bot
Comment 14 2017-07-03 22:18:18 PDT
Comment on attachment 314548 [details] patch Clearing flags on attachment: 314548 Committed r219114: <http://trac.webkit.org/changeset/219114>
WebKit Commit Bot
Comment 15 2017-07-03 22:18:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.